--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,11 @@ services:
       - ~/data/mail/maildata:/var/mail
       - ~/data/mail/mailstate:/var/mail-state
       - ~/data/mail/config/:/tmp/docker-mailserver/
+      - /data/nginx-proxy-https/certs/mail..info.baiwangjinfu.com mounted to /etc/letsencrypt/live/mail.info.baiwangjinfu.com 
     environment:
       - ONE_DIR=1
       - ENABLE_LDAP=1
+      - SSL_TYPE=letsencrypt
       - LDAP_SERVER_HOST=ldap # your ldap container/IP/ServerName
       - LDAP_SEARCH_BASE=ou=people,dc=xjbw,dc=com
       - LDAP_BIND_DN=cn=admin,dc=xjbw,dc=com
