--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - LDAP_QUERY_FILTER_ALIAS="(&(mailAlias=%s)(mailEnabled=TRUE))"
       - DOVECOT_PASS_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
       # - DOVECOT_USER_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
-      # - DOVECOT_PASS_ATTRS="cn=user,userPassword=password"
+      - DOVECOT_PASS_ATTRS="cn=user,userPassword=password"
       - ENABLE_SASLAUTHD=1
       - SASLAUTHD_MECHANISMS=ldap
       - SASLAUTHD_LDAP_SERVER=ldap
