--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - DOVECOT_PASS_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
       - DOVECOT_USER_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
       - DOVECOT_PASS_ATTRS="cn=user,userPassword=password"
+      - DOVECOT_USER_ATTRS=homeDirectory=home
       - ENABLE_SASLAUTHD=1
       - SASLAUTHD_MECHANISMS=ldap
       - SASLAUTHD_LDAP_SERVER=ldap
