--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "587:587"
       - "993:993"
     volumes:
-      - ~/data/mail/maildata:/var/mail
+      # - ~/data/mail/maildata:/var/mail
       - ~/data/mail/mailstate:/var/mail-state
       - ~/data/mail/config/:/tmp/docker-mailserver/
       - /data/nginx-proxy-https/certs/mail..info.baiwangjinfu.com mounted to /etc/letsencrypt/live/mail.info.baiwangjinfu.com 
