--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,16 @@ services:
       - "993:993"
     volumes:
       # - ~/data/mail/maildata:/var/mail
-      - ~/data/mail/mailstate:/var/mail-state
+      - maildata:/var/mail
+      # - ~/data/mail/mailstate:/var/mail-state
+      - mailstate:/var/mail-state
       - ~/data/mail/config/:/tmp/docker-mailserver/
       - ~/data/nginx-proxy-https/certs/mail.info.baiwangjinfu.com:/etc/letsencrypt/live/mail.info.baiwangjinfu.com 
+    volumes:
+      maildata:
+        driver: local
+      mailstate:
+        driver: local
     environment:
       - ONE_DIR=1
       - ENABLE_LDAP=1
