--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,8 @@ services:
       - "587:587"
       - "993:993"
     volumes:
-      # - ~/data/mail/maildata:/var/mail
-      - maildata:/var/mail
-      # - ~/data/mail/mailstate:/var/mail-state
-      - mailstate:/var/mail-state
+      - ~/data/mail/maildata:/var/mail
+      - ~/data/mail/mailstate:/var/mail-state
       - ~/data/mail/config/:/tmp/docker-mailserver/
       - ~/data/nginx-proxy-https/certs/mail.info.baiwangjinfu.com:/etc/letsencrypt/live/mail.info.baiwangjinfu.com 
 
@@ -27,8 +25,8 @@ services:
       - ENABLE_LDAP=1
       - SSL_TYPE=letsencrypt
       - LDAP_SERVER_HOST=ldap # your ldap container/IP/ServerName
-      - LDAP_SEARCH_BASE=ou=people,dc=xjbw,dc=com
-      - LDAP_BIND_DN=cn=admin,dc=xjbw,dc=com
+      - LDAP_SEARCH_BASE="ou=people,dc=xjbw,dc=com"
+      - LDAP_BIND_DN="cn=admin,dc=xjbw,dc=com"
       - LDAP_BIND_PW=xjbwinfo
       - LDAP_QUERY_FILTER_USER="(&(mail=%s)(mailEnabled=TRUE))"
       - LDAP_QUERY_FILTER_GROUP="(&(mailGroupMember=%s)(mailEnabled=TRUE))"
@@ -36,17 +34,12 @@ services:
       - DOVECOT_PASS_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
       - DOVECOT_USER_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
       - DOVECOT_PASS_ATTRS="cn=user,userPassword=password"
-      - DOVECOT_USER_ATTRS=homeDirectory=home
+      - DOVECOT_USER_ATTRS="homeDirectory=home"
       - DOVECOT_MAIL_UID=docker
       - DOVECOT_MAIL_GID=docker
       - ENABLE_SASLAUTHD=1
       - SASLAUTHD_MECHANISMS=ldap
       - SASLAUTHD_LDAP_SERVER=ldap
-      - SASLAUTHD_LDAP_BIND_DN=cn=admin,dc=xjbw,dc=com
+      - SASLAUTHD_LDAP_BIND_DN="cn=admin,dc=xjbw,dc=com"
       - SASLAUTHD_LDAP_PASSWORD=xjbwinfo
-      - SASLAUTHD_LDAP_SEARCH_BASE=ou=people,dc=xjbw,dc=com
-volumes:
-  maildata:
-    driver: local
-  mailstate:
-    driver: local
+      - SASLAUTHD_LDAP_SEARCH_BASE="ou=people,dc=xjbw,dc=com"
