--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       - LDAP_QUERY_FILTER_ALIAS="(&(mailAlias=%s)(mailEnabled=TRUE))"
       - DOVECOT_PASS_FILTER="(&(objectClass=inetOrgPerson)(mail=%n))"
       - DOVECOT_USER_FILTER="(&(objectClass=inetOrgPerson)(mail=%n))"
-      # - DOVECOT_PASS_ATTRS="cn=user,userPassword=password"
-      # - DOVECOT_USER_ATTRS="homeDirectory=home"
+      - DOVECOT_PASS_ATTRS="mail=user,userPassword=password"
+      - DOVECOT_USER_ATTRS="homeDirectory=home"
       - ENABLE_SASLAUTHD=1
       - SASLAUTHD_MECHANISMS=ldap
       - SASLAUTHD_LDAP_SERVER=ldap
