--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,10 +34,9 @@ services:
       - DOVECOT_PASS_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
       - DOVECOT_USER_FILTER="(&(objectClass=inetOrgPerson)(cn=%n))"
       - DOVECOT_PASS_ATTRS="cn=user,userPassword=password"
-      # - DOVECOT_USER_ATTRS="homeDirectory=home"
       - ENABLE_SASLAUTHD=1
-      - SASLAUTHD_MECHANISMS=ldap
-      - SASLAUTHD_LDAP_SERVER=ldap
-      - SASLAUTHD_LDAP_BIND_DN="cn=admin,dc=xjbw,dc=com"
-      - SASLAUTHD_LDAP_PASSWORD=xjbwinfo
-      - SASLAUTHD_LDAP_SEARCH_BASE="ou=people,dc=xjbw,dc=com"
+      - SASLAUTHD_MECHANISMS=rimap
+      # - SASLAUTHD_LDAP_SERVER=ldap
+      # - SASLAUTHD_LDAP_BIND_DN="cn=admin,dc=xjbw,dc=com"
+      # - SASLAUTHD_LDAP_PASSWORD=xjbwinfo
+      # - SASLAUTHD_LDAP_SEARCH_BASE="ou=people,dc=xjbw,dc=com"
