--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,8 @@ services:
       - DOVECOT_PASS_ATTRS="cn=user,userPassword=password"
       - ENABLE_SASLAUTHD=1
       - SASLAUTHD_MECHANISMS=rimap
-      # - SASLAUTHD_LDAP_SERVER=ldap
-      # - SASLAUTHD_LDAP_BIND_DN="cn=admin,dc=xjbw,dc=com"
-      # - SASLAUTHD_LDAP_PASSWORD=xjbwinfo
-      # - SASLAUTHD_LDAP_SEARCH_BASE="ou=people,dc=xjbw,dc=com"
+      - SASLAUTHD_LDAP_SERVER=ldap
+      - SASLAUTHD_LDAP_BIND_DN="cn=admin,dc=xjbw,dc=com"
+      - SASLAUTHD_LDAP_PASSWORD=xjbwinfo
+      - SASLAUTHD_LDAP_SEARCH_BASE="ou=people,dc=xjbw,dc=com"
+      - SASLAUTHD_LDAP_FILTER="(&(objectClass=inetOrgPerson)(cn=%U))""
