--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '2'
+version: '3'
 
 services:
   mail:
     image: tvial/docker-mailserver:latest
     hostname: mail
-    domainname: info.baiwangjinfu.com
+    domainname: wuyad.top
     container_name: mail
     restart: always
     external_links:
@@ -15,10 +15,11 @@ services:
       - "587:587"
       - "993:993"
     volumes:
+      - /etc/localtime:/etc/localtime:ro
       - ~/data/mail/maildata:/var/mail
       - ~/data/mail/mailstate:/var/mail-state
       - ~/data/mail/config/:/tmp/docker-mailserver/
-      - ~/data/nginx-proxy-https/certs/mail.info.baiwangjinfu.com:/etc/letsencrypt/live/mail.info.baiwangjinfu.com 
+      - ~/data/nginx-proxy-https/certs/mail.wuyad.top:/etc/letsencrypt/live/mail.info.baiwangjinfu.com 
 
     environment:
       - ONE_DIR=1
@@ -34,7 +35,7 @@ services:
       - DOVECOT_PASS_FILTER=(&(objectClass=inetOrgPerson)(cn=%n))
       - DOVECOT_USER_FILTER=(&(objectClass=inetOrgPerson)(cn=%n))
       - DOVECOT_PASS_ATTRS=cn=user,userPassword=password
-      - ENABLE_SASLAUTHD=0
+      - ENABLE_SASLAUTHD=1
       - SASLAUTHD_MECHANISMS=ldap
       - SASLAUTHD_LDAP_SERVER=ldap
       - SASLAUTHD_LDAP_BIND_DN=cn=admin,dc=xjbw,dc=com
