--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ~/data/mail/maildata:/var/mail
       - ~/data/mail/mailstate:/var/mail-state
       - ~/data/mail/config/:/tmp/docker-mailserver/
-      - ~/data/nginx-proxy-https/certs/mail.wuyad.top:/etc/letsencrypt/live/mail.info.baiwangjinfu.com 
+      - ~/data/nginx-proxy-https/certs/mail.wuyad.top:/etc/letsencrypt/live/mail.wuyad.top 
 
     environment:
       - ONE_DIR=1
